# docker-flickies

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.cuda  Dockerfile.dev  Makefile  README.md  engines.json  entrypoint.sh  openapi.yaml  pyproject.toml  requirements-heavy-cpu.txt  requirements-heavy-cuda.txt
pkg/clients/python/flickies-client/: README.md  pyproject.toml
pkg/clients/python/flickies-client/flickies_client/: __init__.py
pkg/clients/python/flickies-client/flickies_client/api/engines/: evict_engine.py  list_engines.py
pkg/clients/python/flickies-client/flickies_client/api/files/: delete_file.py  get_file.py  put_file.py
pkg/clients/python/flickies-client/flickies_client/api/health/: get_health.py
pkg/clients/python/flickies-client/flickies_client/api/info/: post_video_info.py
pkg/clients/python/flickies-client/flickies_client/api/jobs/: get_job.py
pkg/clients/python/flickies-client/flickies_client/models/: __init__.py  base_video_input_request.py  base_video_output_request.py  base_video_output_request_output_format.py  engine_info.py  engine_list.py  error_body.py  error_body_details.py  health_response.py  job_accepted_response.py  job_status_response.py  job_status_response_error_type_0.py  job_status_response_status.py  staged_output_response.py  url_output_response.py  video_info_response.py  video_restore_request.py  video_restore_request_engine.py  video_scale_request.py  video_transcode_request.py  video_transcode_request_gif_options_type_0.py  video_transcode_request_gif_options_type_0_palette_mode.py  video_trim_request.py
(+55 files in other folders)
