[tool.poetry]
name = "flickies-client"
version = "0.2.0"
description = "A client library for accessing flickies"
authors = []
readme = "README.md"
packages = [
    { include = "flickies_client" },
]
include = ["flickies_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.23.1,<0.29.0"
attrs = ">=22.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
